k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-tours-frontend
  namespace: travel-tours
  labels:
    app: travel-tours-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: travel-tours-frontend
  template:
    metadata:
      labels:
        app: travel-tours-frontend
    spec:
      containers:
        - name: frontend
          image: anamarijamileska/travel-tours-frontend:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
