k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: travel-tours-db
  namespace: travel-tours
spec:
  clusterIP: None
  selector:
    app: travel-tours-db
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
